crates/knok/tests/ui/pad_shape.stderr
error: pad dimension 0 is out of bounds: input dimension 2 + low padding 1 exceeds output dimension 2
 --> tests/ui/pad_shape.rs:3:1
  |
3 | #[knok::graph(backend = Backend::LlvmCpu)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/pad_shape.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
